# Super-computing-for-big-data

./: README.md
AWS-application/lab-2-group-09/: README.md  build.sbt
AWS-application/lab-2-group-09/src/main/scala/: .Lab1.scala.swp  Lab2.scala
Kafka-Streaming-application/lab-3-group-09/: README.md
Kafka-Streaming-application/lab-3-group-09/consumer/: build.rs
Kafka-Streaming-application/lab-3-group-09/consumer/visualizer/: package-lock.json
Kafka-Streaming-application/lab-3-group-09/consumer/visualizer/src/: index.js
Kafka-Streaming-application/lab-3-group-09/producer/: .gitignore  Cargo.toml  build.rs
Kafka-Streaming-application/lab-3-group-09/transformer/: .gitignore  .scalafmt.conf  build.sbt
lab1/lab-1-group-09/: Dockerfile  README.md
lab1/lab-1-group-09/project/: plugins.sbt
lab1/lab-1-group-09/src/main/scala/: typecheck.scala
lab2/lab-2-group-09/src/main/scala/: typecheck.scala
lab3/lab-3-group-09/: Dockerfile  docker-compose.yml
lab3/lab-3-group-09/consumer/: Cargo.toml
lab3/lab-3-group-09/consumer/src/: main.rs
lab3/lab-3-group-09/consumer/visualizer/: package.json
lab3/lab-3-group-09/consumer/visualizer/src/: index.css  index.html
lab3/lab-3-group-09/producer/src/: main.rs
lab3/lab-3-group-09/transformer/src/main/scala/: Transformer.scala  typecheck.scala
local-application/lab-1-group09/src/main/scala/: Lab1.scala
