[package]
name = "producer"
version = "0.0.0"
publish = false
authors = ["Matthijs Brobbel <m1brobbel@gmail.com>"]
edition = "2018"

[dependencies]
chrono = "0.4"
geojson = "0.22"
lazy_static = "1"
rand = "0.8"
rdkafka = { version= "0.26", features = ["cmake-build"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.12", features = ["macros"] }

[build-dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
