[package]
name = "consumer"
version = "0.0.0"
publish = false
authors = ["Matthijs Brobbel <m1brobbel@gmail.com>"]
edition = "2018"

[dependencies]
futures = "0.3"
geojson = "0.22"
rdkafka = { version= "0.26", features = ["cmake-build"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros"] }
tokio-stream = { version = "0.1", features = ["sync"] }
warp = "0.3"

[build-dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
